2023-11-22  Niels Möller  <nisse@lysator.liu.se>

	Revert part of the 2023-08-05 change.
	* rsa-sec-decrypt.c (rsa_sec_decrypt): Merge with
	_rsa_sec_decrypt, including input range check.
	(_rsa_sec_decrypt): Deleted.
	* rsa-internal.h (_rsa_sec_decrypt): Delete declaration.
	* testsuite/rsa-sec-decrypt-test.c (rsa_decrypt_for_test): Always
	call rsa_sec_decrypt, but don't annotate the ciphertext input as
	undefined/secret.

2023-11-15  Niels Möller  <nisse@lysator.liu.se>

	* ecc-mod-arith.c (ecc_mod_addmul_1): Use assert_maybe.
	* ecc-curve448.c (ecc_curve448_modp): Likewise.
	* ecc-curve25519.c (ecc_curve25519_modq): Likewise.
	* eddsa-hash.c (_eddsa_hash): Likewise.
	* eddsa-sign.c (_eddsa_sign): Likewise.

	* testsuite/curve25519-dh-test.c (test_g): Add calls to
	mark_bytes_undefined and mark_bytes_defined.
	(test_a): Likewise.
	(test_main): Skip side-channel tests in builds with mini-gmp or
	extra asserts enabled.
	* testsuite/curve448-dh-test.c: Analogous changes.
	* testsuite/ed448-test.c (test_one): Analogous changes.
	* testsuite/ed25519-test.c: Analogous changes.

	* testsuite/Makefile.in (TS_SC_HOGWEED): New make variable. Added
	sc-curve25519-dh-test, sc-curve448-dh-test, sc-ed25519-test, and
	sc-ed448-test to list.
	* testsuite/sc-curve25519-dh-test: New testcase.
	* testsuite/sc-curve448-dh-test: New testcase.
	* testsuite/sc-ed448-test: New testcase.
	* testsuite/sc-ed25519-test: New testcase.

2023-11-14  Niels Möller  <nisse@lysator.liu.se>

	Add a first side-channel test for the ECC code.
	* configure.ac: New option --enable-extra-asserts. Enables asserts
	that are disabled by default, due to conflict with tests of
	side-channel silence.
	(WITH_EXTRA_ASSERTS): Corresponding new define.
	* ecc-internal.h (assert_maybe): Conditionally define this assert
	macro, depending on WITH_EXTRA_ASSERTS.
	* ecc-mod-arith.c: Convert most asserts to assert_maybe.
	* ecc-mod-inv.c (ecc_mod_inv): Likewise.
	* ecc-mod.c (ecc_mod): Likewise.