@@ -1,7 +1,6 @@
 /* nettle-internal.h
 
-   Things that are used only by the testsuite and benchmark, and
-   not included in the library.
+   Misc internal definitions.
 
    Copyright (C) 2002, 2014 Niels Möller
 
@@ -38,10 +37,6 @@
 #include <assert.h>
 /* Needed for alloca on bsd systems. */
 #include <stdlib.h>
-
-#include "nettle-meta.h"
-#include "ocb.h"
-#include "aes.h"
 
 /* For definition of NETTLE_MAX_HASH_CONTEXT_SIZE. */
 #include "sha3.h"
@@ -88,62 +83,6 @@
    branch free code on all compilers. Requires that x is at most 31 bits. */
 #define IS_ZERO_SMALL(x) (((uint32_t) (x) - 1U) >> 31)
 
-/* Doesn't quite fit with the other algorithms, because of the weak
- * keys. Weak keys are not reported, the functions will simply crash
- * if you try to use a weak key. */
-
-extern const struct nettle_cipher nettle_des;
-extern const struct nettle_cipher nettle_des3;
-
-extern const struct nettle_cipher nettle_blowfish128;
-
-extern const struct nettle_cipher nettle_unified_aes128;
-extern const struct nettle_cipher nettle_unified_aes192;
-extern const struct nettle_cipher nettle_unified_aes256;
-
-/* Stream ciphers treated as aead algorithms with no authentication. */
-extern const struct nettle_aead nettle_arcfour128;
-extern const struct nettle_aead nettle_chacha;
-extern const struct nettle_aead nettle_salsa20;
-extern const struct nettle_aead nettle_salsa20r12;
-
-/* All-in-one CBC encrypt functinos treated as AEAD with no
-   authentication and no decrypt method. */
-extern const struct nettle_aead nettle_cbc_aes128;
-extern const struct nettle_aead nettle_cbc_aes192;
-extern const struct nettle_aead nettle_cbc_aes256;
-
-extern const struct nettle_aead nettle_openssl_gcm_aes128;
-extern const struct nettle_aead nettle_openssl_gcm_aes192;
-extern const struct nettle_aead nettle_openssl_gcm_aes256;
-
-
-/* Glue to openssl, for comparative benchmarking. Code in
- * examples/nettle-openssl.c. */
-extern void nettle_openssl_init(void);
-extern const struct nettle_cipher nettle_openssl_aes128;
-extern const struct nettle_cipher nettle_openssl_aes192;
-extern const struct nettle_cipher nettle_openssl_aes256;
-extern const struct nettle_cipher nettle_openssl_blowfish128;
-extern const struct nettle_cipher nettle_openssl_des;
-extern const struct nettle_cipher nettle_openssl_cast128;
-
-extern const struct nettle_hash nettle_openssl_md5;
-extern const struct nettle_hash nettle_openssl_sha1;
-
 extern const struct nettle_hash * const _nettle_hashes[];
-
-/* OCB-declarations to be moved to a public header file, once it's
-   settled which nonce and tag sizes to use. */
-#define OCB_NONCE_SIZE 12
-
-struct ocb_aes128_ctx
-{
-  struct ocb_ctx ocb;
-  struct ocb_aes128_encrypt_key key;
-  struct aes128_ctx decrypt;
-};
-
-extern const struct nettle_aead nettle_ocb_aes128;
 
 #endif /* NETTLE_INTERNAL_H_INCLUDED */
